Removed extra spacing in footer text on all pages, moved footer's background color to shared CSS file, fixed dead links to contact form on Home and Products page

--- a/shared.css
+++ b/shared.css
@@ -106,7 +106,7 @@ a:active {
 }
 
 #hib-footer-container {
-	background-color: darkslategrey;
+	background-color: #B15160;
 }
 
 #hib-footer {
